# starbase

./: Makefile.am  Makefile.in  config.h.in~  configure.ac  configure.bkp  configure.scan  configure~
autom4te.cache/: output.0  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
bsd/: Makefile.am  gridtable.in  jottable.in
doc/: Doxyfile.in  Makefile.am  wu.py
gnu/: Makefile.am
iraf/: imhbase
slalink/: eg1950  eqgal  fk425  fk45z  fk524  fk54z  galeq  ge1950  precess  s2tptable  tp2stable
tablelib/: Makefile.am  Makefile.in
tablesrc/: abssorttable  appendtable  applyxyfittable  avg3dtable  classifytable  coltorowtable  compute3dtable  cvstattable  daophototable  diffrtable  domaintable  evalpolytable  evalsvdfittable  expr3dtable  fitsbase  fitshdr  fldtotable  formattable  fun3dtable  funtotable  gethdrtable  gettable  grestable  hdrvaltable  headtable  intertable  jiggletable  listtotable  modetable  overwrite  pivottable  puthdrtable  radecbox  radecboxtable  radialsorttable  rand  randtable  reseqtable  rms3dtable  rotatetable  (+28 more)
tawk/: configure~  missing.c
tawk/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
tawk/test/: fpe_test  mawktest
utillib/: Makefile.am  Makefile.in  except.c  f77.c  filelist.c  sleep.c
