# Makefile.in
#
# Starbase Data Tables	- An Ascii Database for UNIX
# 
#   copyright 1991, 1993, 1995, 1999 John B. Roll jr.
#
#  Starbase Data Tables is distributed without warranty under the terms of
#   the GNU General Public License, version 2, 1991.
#

bin_PROGRAMS = _jot
bin_SCRIPTS = jottable gridtable

_jot_LDADD= $(top_builddir)/utillib/libutil.a -lm

